# vrp-planner

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT
docs/: SOLVER_ALGORITHM.md
specs/: README.md  decision-criteria.md  problem-statement.md  rust-crate-survey.md  vrp-pragmatic-review.md
specs/routing-planner/: README.md  plan.md  research.md  spec.md  tasks.md  test-plan.md
specs/routing-planner/areas/: distance-plan.md  distance-tasks.md  evaluation-plan.md  evaluation-tasks.md  integration-plan.md  integration-tasks.md  ontology-plan.md  ontology-tasks.md  osrm-setup.md  solver-plan.md  solver-tasks.md
specs/test-problems/: service-basic-solution.json  service-basic.json
src/: haversine.rs  lib.rs  osrm.rs  osrm_data.rs  polyline.rs  solver.rs  traits.rs
tests/: osrm_integration.rs  realistic_routing_test.rs  solver_smoke.rs  solver_tests.rs
tests/fixtures/: las_vegas_locations.rs  mod.rs
