[package]
name = "vrp-planner"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
testcontainers = { version = "0.26", features = ["reusable-containers", "blocking"] }
