[package]
name = "vrp-planner"
version = "0.2.1"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
rayon = "1.10"
tracing = "0.1"

[dev-dependencies]
testcontainers = { version = "0.26", features = ["reusable-containers", "blocking"] }
